# meal-maker.github.io

./: CLAUDE.md  pyproject.toml
.github/workflows/: daily-summary.yml  main.yml  test.yml
_includes/: head-custom.html
_posts/: 2026-03-04-summary-en.md  2026-03-05-summary-zh.md  2026-03-06-summary-en.md  2026-03-07-summary-en.md  2026-03-07-summary-zh.md  2026-03-08-summary-zh.md  2026-03-09-summary-zh.md  2026-03-10-summary-zh.md  2026-03-11-summary-zh.md  2026-03-12-summary-en.md  2026-03-12-summary-zh.md  2026-03-13-summary-zh.md  2026-03-15-summary-en.md  2026-03-16-summary-zh.md  2026-03-18-summary-zh.md  2026-03-19-summary-en.md  2026-03-19-summary-zh.md  2026-03-20-summary-en.md  2026-03-21-summary-en.md  2026-03-22-summary-zh.md  2026-03-23-summary-en.md  2026-03-23-summary-zh.md  2026-03-24-summary-zh.md  2026-03-27-summary-zh.md  2026-03-28-summary-en.md  2026-03-28-summary-zh.md  2026-03-29-summary-en.md  2026-03-30-summary-en.md  2026-03-30-summary-zh.md  2026-03-31-summary-en.md  2026-03-31-summary-zh.md  2026-04-01-summary-zh.md  2026-04-03-summary-en.md  2026-04-04-summary-zh.md  2026-04-07-summary-en.md  2026-04-10-summary-en.md  2026-04-11-summary-en.md  2026-04-12-summary-en.md  2026-04-14-summary-en.md  2026-04-14-summary-zh.md  (+79 more)
data/: config.example.json  config.json
data/summaries/: horizon-2026-03-04-en.md  horizon-2026-03-05-en.md  horizon-2026-03-05-zh.md
docs/: _config.yml  index.md
docs/_includes/: head-custom.html
docs/_posts/: 2026-03-05-summary-en.md  (+116 more)
src/: models.py  orchestrator.py
src/ai/: prompts.py  (+2 more)
tests/: test_reddit.py
(+4 files in other folders)
